===================================================

Description
===========

In brackets names of people, who told about error/problem or helped in fixing
or inspired me to make it.

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

ChangeLog
=========
    
2008???? - 1.21.94

[-] * Better skipping of currupted messages in AT (bug #768).
[!] * vC* saving now protects against buffer overflows.
    
20081202 - 1.21.93

[!] * Drop own crosscompilation support, rely on CMake one.
[!] * Also standard CMake parameters used when possible (eg.
      BUILD_SHARED_LIBS).
[-] * Search does not create thread for non existing devices.
[-] * Fixed possible crash when backing up ringtones.
[-] * Fix possible race condition in searching.
[-] * Fixed invoking of CMake with output to custom directory.
[-] * Compile on platforms where ssize_t does not exist.
[-] * Fix detection of towlower on some compilers.
[-] * Make Bluetooth compile using BCC.
[-] * Fix compilation if strtoull does not exist.
[-] * Compile on platforms where intptr_t does not exist.
[-] * Fixed compilation in BCC (see changes above).
[-] * Check whether compiler supports __FUNCTION__.

20081119 - 1.21.92

[-] * Reimplement locking and add tests for it.
[!] * GSM_SetDebugFileDescriptor now accepts flag whether file
      descriptor can be closed (bug #749).
[!] * Soname change due to API breakage (see above).
[-] * Fixed compilation on Mac OS X, thanks to Juan A. Bertolin for
      testing.
    
20081111 - 1.21.91

[+] * Script gammu-config can now also work with whiptail.
[-] * Minor fixes in gammu-config script.
[-] * Extra spaces from connection or device name are now stripped.
[-] * Automatically reinitialize FBUS connection if it is dropped.
[-] * Disable OBEX with Motorola Z6c, it is broken (bug #746).
[-] * Refresh manufacturer information on second init of AT (bug #746).
[-] * Always get charset information on AT phone initialization.