@@ -18,6 +18,7 @@ ChangeLog
 2008???? - 1.21.94
 
 [-] * Better skipping of currupted messages in AT (bug #768).
+[-] * Autoload 6510 module if phone is S40 (bug #767).
 [!] * vC* saving now protects against buffer overflows.
     
 20081202 - 1.21.93
